syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;

service UserService {
  rpc update (UpdateUserRequest) returns (UserResponse);
  rpc get (GetUserRequest) returns (UserResponse);
  rpc getUsers (GetUsersRequest) returns (UsersResponse);
}

// --- Request DTOs ---

message UpdateUserDto {
  optional string email = 1;
  optional string fullName = 2;
  optional string avatarUrl = 3;
  optional string phoneNumber = 4;
  optional bool isSeller = 5;
}

message UserFilterDto {
  optional string id = 1;
  optional string email = 2;
  optional string phoneNumber = 3;
}

message UsersFilterDto {
  repeated string ids = 1;
}


/// --- Requests---

message UpdateUserRequest {
  UserFilterDto filter = 1;
  UpdateUserDto updates = 2;
}

message GetUserRequest {
  repeated UserFilterDto filters = 1;
  repeated string select = 2;
}

message GetUsersRequest {
  UsersFilterDto filter = 1;
  repeated string select = 2;
}

// --- Response VMs ---

message UserVM {
  string id = 1;
  string email = 2;
  optional string avatarUrl = 3;
  string phoneNumber = 4;
  string fullName = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  bool isSeller = 8;
}

// --- Responses ---

message UserResponse {
  optional UserVM data = 1;
}

message UsersResponse {
  repeated UserVM data = 1;
}